# FF-Weekly-Rankings

./: .env.example  .gitignore  CLAUDE.md  README.md  journalists_rankings.csv.example  manual_roster.csv.example  pyproject.toml
.github/workflows/: chatops.yml  ci.yml  weekly-report.yml
docs/: SETUP.md
ff_startsit/: __init__.py  __main__.py  chatops.py  cli.py  config.py  models.py  pipeline.py  report.py  results_log.py  season.py
ff_startsit/calibrate/: __init__.py  backtest.py  learner.py  log_reader.py  outcomes.py
ff_startsit/data/: espn_maps.py  matching.py  sample_signals.json  stadiums.py  teams.py
ff_startsit/engine/: blend.py  normalize.py
ff_startsit/output/: discord.py  html.py  render.py
ff_startsit/roster/: base.py  espn.py  manual.py  sleeper.py
ff_startsit/sources/: base.py  ecr.py  injury.py  journalists.py  sample.py  vegas.py  weather.py
tests/: conftest.py  test_backtest.py  test_calibrate.py  test_calibrate_cli.py  test_chatops.py  test_cli.py  test_config.py  test_discord.py  test_ecr.py  test_engine.py  test_espn.py  test_html.py  test_injury.py  test_journalists.py  test_manual.py  test_matching.py  test_outcomes.py  test_pipeline.py  test_preseason.py  test_report_markdown.py  test_sleeper.py  test_vegas.py  test_weather.py
tests/fixtures/: ecr_api_rb.json  ecr_api_rb_expert1.json  ecr_api_rb_expert2.json  ecr_scrape_rb.html  espn_league.json  manual_roster.csv  odds_api.json  open_meteo.json  sleeper_injury.json  sleeper_players.json  sleeper_stats.json
