[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ff-startsit"
version = "0.1.0"
description = "Weekly fantasy football start/sit tool blending FantasyPros ECR with Vegas implied team totals."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
ffstartsit = "ff_startsit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ff_startsit*"]

[tool.setuptools.package-data]
ff_startsit = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
